# hs-wx-example

./: .gitignore  Makefile  app  stack.yaml  wxtest.cabal
src/: Main.hs
wxtest.app/Contents/: Info.plist
wxtest.app/Contents/MacOS/: .gitignore
