name:                 wxtest
version:              0.1.0.0
author:               Michael Tolly
maintainer:           miketolly@gmail.com
build-type:           Simple
cabal-version:        >= 1.10

executable wxtest
  main-is:              Main.hs
  build-depends:
    base
    , wx
    , wxcore
    , yaml
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
